tests/ui/impl-trait/issues/issue-55872-3.stderr
error: type parameter `T` is part of concrete type but not used in parameter list for the `impl Trait` type alias
  --> $DIR/issue-55872-3.rs:14:20
   |
LL |     fn foo<T>() -> Self::E {
   |                    ^^^^^^^

error: type parameter `T` is part of concrete type but not used in parameter list for the `impl Trait` type alias
  --> $DIR/issue-55872-3.rs:14:20
   |
LL |     fn foo<T>() -> Self::E {
   |                    ^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0277]: the trait bound `{async block@$DIR/issue-55872-3.rs:18:9: 18:14}: Copy` is not satisfied
  --> $DIR/issue-55872-3.rs:14:20
   |
LL |     fn foo<T>() -> Self::E {
   |                    ^^^^^^^ the trait `Copy` is not implemented for `{async block@$DIR/issue-55872-3.rs:18:9: 18:14}`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
